--- a/Platforms/iOS/Info.plist
+++ b/Platforms/iOS/Info.plist
@@ -28,5 +28,9 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 </dict>
 </plist>
